force-app/main/default/objects/Expence_Item__c/Expence_Item__c.object-meta.xml
<CustomObject>
    <label>Expence Item</label>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Expence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>