force-app/main/default/objects/Expence_Item__c/fields/Expence_Date__c.field-meta.xml
<CustomField>
    <fullName>Expence_Date__c</fullName>
    <label>Expence Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>