force-app/main/default/objects/Expence_Item__c/fields/Expence_Report__c.field-meta.xml
<CustomField>
    <fullName>Expence_Report__c</fullName>
    <label>Expence Report</label>
    <referenceTo>Expence_Report__c</referenceTo>
    <relationshipLabel>Expence Items</relationshipLabel>
    <relationshipName>Expence_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>